# POS-semestralka

./: CMakeLists.txt  blbost.txt  client.c  client.h  initData.h  main.c  server.c  server.h  sharedData.h  shared_memory.h  simulacia.txt  world.c  world.h
